# libft

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt  libft.h
src/libchar/: CMakeLists.txt  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_tolower.c  ft_toupper.c
src/libfd/: CMakeLists.txt  ft_long_to_hex.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putstr_fd.c  get_next_line.c  get_next_line.h
src/libmem/: CMakeLists.txt  ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c
src/libnb/: CMakeLists.txt  ft_atoi.c  ft_itoa.c  ft_swap.c
src/libstr/: CMakeLists.txt  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
src/t_lst/: CMakeLists.txt  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
src/vec_algebra/: CMakeLists.txt  matrix_algebra.c  transformations.c  vec_algebra.c
